--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,13 @@
+server:
+  port: 9000
 kafka:
   bootstrapServers: localhost:9092
   groupID: kafka-sandbox
-okta:
-  oauth2:
-    issuer: https://dev-16780229.okta.com/oauth2/default
-    client-id: 0oa26q50op8HAQBDL5d7
-    client-secret: UmMOHE2EmqSSpSjMS96uUmGko-YajMMVp1mOGGHh
+  topicName: myTopic
+  autoOffsetReset: earliest
+
+#okta:
+#  oauth2:
+#    issuer: https://dev-16780229.okta.com/oauth2/default
+#    client-id: 0oa26q50op8HAQBDL5d7
+#    client-secret: UmMOHE2EmqSSpSjMS96uUmGko-YajMMVp1mOGGHh
